# brain-language

./: .gitignore  Cargo.toml  Makefile  README.md  brain.grammar
.devcontainer/: devcontainer.json
brain/: Cargo.toml
brain-attribute/: Cargo.toml
brain-attribute/src/: lib.rs  parser.rs
brain-error/: Cargo.toml
brain-errors/: Cargo.toml
brain-grammar/: Cargo.toml
brain-grammar/src/: lib.rs
brain-grammar/src/grammar/: context.rs  mod.rs  output.rs  token.rs  util.rs  value.rs
brain-grammar/src/grammar/expressions/: binary.rs  collection.rs  enum.rs  functioncall.rs  identifier.rs  literal.rs  map.rs  mod.rs  tuple.rs
brain-grammar/src/grammar/expressions/accessors/: field.rs  index.rs  mod.rs
brain-grammar/src/grammar/expressions/builtin/: append.rs  len.rs  merge.rs  mod.rs  print.rs  remove.rs
brain-grammar/src/grammar/expressions/operator/: bitwise.rs  comparison.rs  logical.rs  mathematical.rs  mod.rs
brain-grammar/src/grammar/statements/: assignment.rs  block.rs  break.rs  conditional.rs  continue.rs  enumedefinition.rs  for.rs  functiondefinition.rs  loop.rs  mod.rs  reassignment.rs  return.rs
brain-grammar/src/grammar/value/: literal.rs  mod.rs
brain-grammar/src/grammar/value/complex/: collection.rs  enum.rs  enumdefinition.rs  function.rs  map.rs  mod.rs  tuple.rs
brain-token/: Cargo.toml
brain_attribute/: Cargo.toml
samples/: bitwise.br  calc.br  collection.br  compare.br  continue.br  functions.br  if.br  len.br  loop.br  loop_if_else.br  map.br  multiline.br  mut.br  (+3 more)
tests/: Cargo.toml
tests/src/: attribute.rs  lib.rs
(+107 files in other folders)
