[package]
name = "brain-grammar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
brain-attribute = { path = "../brain-attribute" }
brain-token = { path = "../brain-token" }
brain-error = { path = "../brain-error" }