[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[profile]
release = { lto = true }
bench = { lto = true }

[dependencies]
brain-attribute = { path = "../brain-attribute" }
brain-token = { path = "../brain-token" }
brain-error = { path = "../brain-error" }
brain-grammar = { path = "../brain-grammar" }